# serde_dokechi

./: Cargo.toml  Makefile  README.md
src/: de.rs  lib.rs  ser.rs  varuint.rs
